# nota-fiscal-facilitada

./: .gitignore  README.md  pyproject.toml
api_mock/: api_mock.py  client_nfse.py
backend/: .dockerignore  .env.docker.example  .env.example  Dockerfile  alembic.ini  docker-compose.yaml  entrypoint.py  entrypoint.sh  nfse.db  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 02bd0a155362_teste_detinatarios_e_emitentes.py  16f4999ad3c2_alteração_nas_models.py  5537e0cd6c6a_initial_tables.py  64134d8a82d1_migração_principal_para_testes.py  b200b8fddb46_informações_da_tabela_atualizadas.py  c4de4d4a946b_initial_tables.py  cf1187b7a576_migração_com_alterações_de_emitentes_e_.py  eb716acb2cfb_cria_a_tabela_de_notas_fiscais.py
backend/src/: app.py  main.py  run.py  security.py  settings.py
backend/src/db/: database.py  db.py
backend/src/models/: __init__.py  abstract_base.py  cliente_model.py  destinatario_model.py  emitente_model.py  nfse_model.py  notaFiscal_model.py  role_model.py  user_model.py
backend/src/repositories/: cliente_repository.py  destinatario_repository.py  emitente_repository.py  nota_fiscal_repository.py  role_repository.py  user_repository.py
backend/src/routers/: auth.py  cliente_router.py  destinatarios.py  emitentes.py  nota_fiscal_router.py  notas_fiscais.py  roles.py  users.py
backend/src/schemas/: cliente_schema.py  destinatario_schema.py  emitente_schema.py  nota_fiscal_schema.py  role_schema.py  user_schema.py
backend/src/validators/: phone_number_validator.py
frontend/: app.js  package-lock.json  pyproject.toml
frontend/html/: index.html
frontend/public/: index.html
frontend/src/: app.jsx  routes.jsx
frontend/src/components/: login.jsx  register.jsx
frontend/src/components/destinatarios/: destinatarios.jsx  destinatariosStyle.css  index.js
frontend/src/components/emitentes/: emitentes.jsx  emitentesStyle.css  index.js
frontend/src/components/login/: login.jsx  loginStyle.css
frontend/src/components/nfseConsultation/: index.js  nfseConsultation.jsx  nfseConsultationStyle.css
frontend/src/components/nfseRegister/: index.js  nfseRegister.jsx  nfseRegisterStyle.css
frontend/src/components/notFound/: index.js  notFound.css  notFound.jsx  notFoundStyle.css
frontend/src/components/register/: register.jsx  registerStyle.css
frontend/src/components/ui/accessibility/: AccessibilityBtn.css  AccessibilityBtn.jsx  accessibilityBtn.css  accessibilityBtn.jsx  index.js
frontend/src/components/ui/autoComplete/: autoComplete.jsx  autoCompleteStyle.css
frontend/src/components/ui/navBar/: navBar.jsx  navBarStyle.css
frontend/src/router/: routes.jsx
frontend/src/services/: api.js
frontend/styles/: style.css
src/api/: client_nfse.py  db_mock.py
